--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <i class="fa-solid fa-bars"></i>
           </div>
         </nav>
+        <img src="media/thumbnail.jpeg" class="song-img">
       </div>
     </div>
   </body>
