added audio file and display on frontend

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
           </div>
         </nav>
         <img src="media/thumbnail.jpeg" class="song-img">
+        <h1>Alayhi Salami</h1>
+        <p>Abdurahman Kunnath | Az Zuhud Media</p>
+
+
+        <audio controls>
+          <source src="media/Nasheed.m4a" type="audio/mpeg">
+        </audio>
+        <input type="range" value="0" id="progress">
+
       </div>
     </div>
   </body>
