--- a/index.html
+++ b/index.html
@@ -24,23 +24,24 @@
             <i class="fa-solid fa-bars"></i>
           </div>
         </nav>
-        <img src="media/thumbnail.jpeg" class="song-img">
+        <img src="media/thumbnail.jpeg" class="song-img" />
         <h1>Alayhi Salami</h1>
         <p>Abdurahman Kunnath | Az Zuhud Media</p>
 
-
         <audio controls>
-          <source src="media/Nasheed.m4a" type="audio/mpeg">
+          <source src="media/Nasheed.m4a" type="audio/mpeg" />
         </audio>
-        <input type="range" value="0" id="progress">
+        <input type="range" value="0" id="progress" />
 
         <div class="controls">
           <div><i class="fa-solid fa-backward"></i></div>
           <div><i class="fa-solid fa-play"></i></div>
           <div><i class="fa-solid fa-forward"></i></div>
         </div>
-
       </div>
     </div>
+
+
+    
   </body>
 </html>
