--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
           ctrlIcon.classList.add("fa-pause");
         }
       }
+
+      if(song.play()){
+        setInterval(()=> {
+          progress.value = song.currentTime;
+        },200);
+      }
       
 
     </script>
