--- a/index.html
+++ b/index.html
@@ -33,47 +33,50 @@
         </audio>
         <input type="range" value="0" id="progress" />
 
-        <div class="controls" >
+        <div class="controls">
           <div><i class="fa-solid fa-backward"></i></div>
-          <div onclick="playPause()"><i class="fa-solid fa-play" id="ctrlIcon"></i></div>
+          <div onclick="playPause()">
+            <i class="fa-solid fa-play" id="ctrlIcon"></i>
+          </div>
           <div><i class="fa-solid fa-forward"></i></div>
         </div>
       </div>
     </div>
 
-
     <script>
-
       let progress = document.getElementById("progress");
       let song = document.getElementById("song");
       let ctrlIcon = document.getElementById("ctrlIcon");
-      
 
-      song.onloadedmetadata = function(){
+      song.onloadedmetadata = function () {
         progress.max = song.duration;
         progress.value = song.currentTime;
-      }
+      };
 
-      function playPause(){
-        if(ctrlIcon.classList.contains("fa-pause")){
+      function playPause() {
+        if (ctrlIcon.classList.contains("fa-pause")) {
           song.pause();
           ctrlIcon.classList.remove("fa-pause");
           ctrlIcon.classList.add("fa-play");
-        }
-        else{
+        } else {
           song.play();
           ctrlIcon.classList.remove("fa-play");
           ctrlIcon.classList.add("fa-pause");
         }
       }
 
-      if(song.play()){
-        setInterval(()=> {
+      if (song.play()) {
+        setInterval(() => {
           progress.value = song.currentTime;
-        },200);
+        }, 200);
       }
-      
 
+      progress.onchange = function () {
+        song.play();
+        song.currentTime = progress.value;
+        ctrlIcon.classList.remove("fa-play");
+        ctrlIcon.classList.add("fa-pause");
+      };
     </script>
   </body>
 </html>
